# pc-controller-mcp

./: .gitignore  Cargo.toml  README.md
docs/: 图片网格系统.md
src/: error.rs  lib.rs  main.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/protocol/: http.rs  mod.rs  stdio.rs  ws.rs
src/tools/: config.rs  coordinate_overlay.rs  input.rs  mod.rs  pc_controller.rs  screen.rs  vision.rs  window.rs
