[package]
name = "pc-controller-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for PC control (screen capture, window management, input simulation)"
license = "MIT"

[dependencies]
# MCP Protocol
rmcp = { version = "1.3", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }

# HTTP/WebSocket server
axum = { version = "0.8", features = ["ws"] }
http = "1"
http-body = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tokio-tungstenite = "0.26"
tokio-util = "0.7"

# Platform specific
xcap = "0.9"
enigo = { version = "0.6", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Image processing
image = { version = "0.25", features = ["png"] }

# Coordinate overlay text rendering
imageproc = "0.25"
rusttype = "0.9"

# Base64 encoding
base64 = "0.22"
